--- a/Fixture.html
+++ b/Fixture.html
@@ -13,7 +13,7 @@
 <body>
     <a id="tips"></a>
     <header>
-        <a href="home.html">
+        <a href="index.html">
         <img src="images/head.png" alt="Kerala Blasters FC"></a>
     </header>
     <div id="top" class="main up">
