--- a/gallery.html
+++ b/gallery.html
@@ -20,7 +20,7 @@
 </head>
 <body>
     <header>
-        <a href="home.html"><img class="home" src="images/Icon.png" alt="home">
+        <a href="index.html"><img class="home" src="images/Icon.png" alt="home">
     </a></header>
     <div id="lightgallery">
         <a href="images/img_1.jpg">
