--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <header>
         <div class="header">
             <ul>
-                <li><a href="home.html"><img src="images/home.png" alt="Home">Home</a></li>
+                <li><a href="index.html"><img src="images/home.png" alt="Home">Home</a></li>
                 <li><a href="Fixture.html"><img src="images/fixture.png" alt="Fixture">Fixture</a></li>
                 <li><a href="gallery.html"><img class="large" src="images/gallery.png" alt="Gallary">Gallary</a></li>
             </ul>
